# doc_filler

./: .gitignore  Dockerfile  README.md  deploy_script.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  test_script.py
.github/workflows/: main.yml
doc_filler/: asgi.py  celery_config.py  settings.py  shared_mixin_classes.py  urls.py  wsgi.py
doc_filler/apps/docs_processor/: apps.py  forms.py  tasks.py  urls.py  views.py
doc_filler/apps/docs_processor/templates/doc_processor/: base_generic.html  home.html  task_failed.html  task_pending.html  task_succeed.html
doc_filler/apps/users/: apps.py  fields.py  forms.py  models.py  tests.py  urls.py  user_testers.py  views.py
doc_filler/apps/users/test_fixtures/: users.json
doc_filler/templates/doc_filler/: base_generic.html  login.html
doc_filler/templates/doc_filler/doc_processor/: home.html  task_failed.html  task_pending.html  task_succeed.html
doc_filler/templates/doc_filler/users/: create_user.html  update_user.html
doc_filler/templates/layouts/: form.html
nginx_conf/: nginx.conf
