[tool.poetry]
name = "doc_filler"
version = "0.1.0"
description = ""
authors = ["andrey_berezin"]

[tool.poetry.dependencies]
python = "^3.9"
python-docx = "^0.8.11"
Django = "^4.0.1"
celery = "^5.2.3"
redis = "^4.1.2"
pandas = "^1.4.0"
openpyxl = "^3.0.9"
docx = "^0.2.4"
docxtpl = "^0.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
