[tool.poetry]
name = "doc_filler"
version = "0.1.0"
description = ""
authors = ["andrey_berezin"]

[tool.poetry.dependencies]
python = "^3.9"
python-docx = "^0.8.11"
Django = "^4.0.1"
pandas = "^1.4.0"
openpyxl = "^3.0.9"
docx = "^0.2.4"
docxtpl = "^0.15.2"
docxcompose = "^1.3.4"
psycopg2-binary = "^2.9.3"
django-environ = "^0.8.1"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
